--- a/sass/elements/text.sass
+++ b/sass/elements/text.sass
@@ -86,6 +86,14 @@ a
     &-9-xs
       font-size: .25em
 
+    .text
+      &-centered-xs, &-center-xs
+        text-align: center
+      &-right-xs
+        text-align: right
+      &-justify-xs
+        text-align: justify
+
 // S = SMALL - Mobile
 @media screen and (min-width: 576px)
   .is
@@ -118,9 +126,15 @@ a
     &-9-s
       font-size: .25em
 
+    .text
+      &-centered-s, &-center-s
+        text-align: center
+      &-right-s
+        text-align: right
+      &-justify-s
+        text-align: justify
 
 // M = MEDIUM - Tablette
-
 @media screen and (min-width: 768px)
   .is
     &-0-m
@@ -152,8 +166,15 @@ a
     &-9-m
       font-size: .25em
 
-// L = LARGE - Desktop
+  .text
+    &-centered-m, &-center-m
+      text-align: center
+    &-right-m
+      text-align: right
+    &-justify-m
+      text-align: justify
 
+// L = LARGE - Desktop
 @media screen and (min-width: 1024px)
   .is
     &-0-l
@@ -184,6 +205,14 @@ a
       font-size: .5em
     &-9-l
       font-size: .25em
+
+  .text
+    &-centered-l, &-center-l
+      text-align: center
+    &-right-l
+      text-align: right
+    &-justify-l
+      text-align: justify
 
 // XL = EXTRA LARGE - Large Desktop
 
